update react version ~

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "spm": {
     "main": "index.js",
     "dependencies": {
-      "react": "0.12.1"
+      "react": "~0.12.1"
     },
     "devDependencies": {
       "expect.js": "0.3.1",
