--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "rc-tabs",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
+    "react-component",
     "react-tabs"
   ],
   "homepage": "http://github.com/react-component/tabs",
-  "author": "dxq613@gmail.com",
+  "maintainers": [
+    "yiminghe@gmail.com",
+    "dxq613@gmail.com"
+  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:react-component/tabs.git"
@@ -17,59 +21,40 @@
   },
   "licenses": "MIT",
   "spm": {
-    "main": "index.js",
     "dependencies": {
       "react": "~0.12.1"
     },
     "devDependencies": {
-      "expect.js": "0.3.1",
-      "sinon" : "1.12.1",
-      "simulate-dom-event": "^1.0.1"
+      "bootstrap": "~3.3.1"
     }
   },
-  "config":{
-    "port":8000
+  "config": {
+    "port": 8002
   },
   "scripts": {
-    "start": "node --harmony server",
-    "publish": "gulp tag",
-    "lint": "gulp lint",
+    "less": "rc-tools run less",
+    "history": "rc-tools run history",
+    "start": "node --harmony node_modules/.bin/rc-server",
+    "publish": "spm publish && rc-tools run tag",
+    "lint": "rc-tools run lint",
     "test": "",
-    "browser-test": "mocha-phantomjs http://localhost:$npm_package_config_port/tests/runner.html",
-    "browser-test-cover": "mocha-phantomjs -R node_modules/node-jscover/lib/reporters/mocha/console http://localhost:$npm_package_config_port/tests/runner.html?coverage"
+    "saucelabs": "rc-tools run saucelabs",
+    "browser-test": "rc-tools run browser-test",
+    "browser-test-cover": "rc-tools run browser-test-cover"
   },
   "devDependencies": {
-    "es5-shim": "~4.0.5",
+    "async": "~0.9.0",
+    "bootstrap": "~3.3.1",
     "expect.js": "~0.3.1",
-    "gh-changelog": "^1.0.5",
-    "gulp": "^3.8.7",
-    "gulp-jscs": "^1.1.0",
-    "gulp-jshint": "^1.8.4",
-    "gulp-jsx": "~0.6.0",
-    "gulp-util": "^3.0.1",
-    "jquery": "~1.11.1",
-    "jshint": "^2.5.5",
-    "jshint-stylish": "^0.4.0",
-    "koa": "~0.13.0",
-    "koa-body": "^0.4.0",
-    "koa-jsx": "^1.1.3",
-    "koa-modularize": "^3.0.0",
-    "koa-mount": "~1.3.0",
-    "koa-node-jscover": "^1.0.0",
-    "koa-serve-index": "~1.0.1",
-    "koa-static": "~1.4.7",
-    "mocha": "~2.0.1",
-    "modulex": "~1.7.3",
-    "node-jscover": "^0.6.8",
-    "node-jscover-coveralls": "^1.0.13",
+    "modulex": "^1.7.4",
     "precommit-hook": "^1.0.7",
-    "react": "~0.12.1",
-    "react-tools": "~0.12.1",
-    "simulate-dom-event": "^1.0.1",
-    "sinon" : "1.12.1"
+    "rc-server": "^1.5.0",
+    "rc-tools": "^1.1.0",
+    "react": "~0.12.1"
   },
   "precommit": [
-    "lint"
+    "lint",
+    "less"
   ],
   "browserify-shim": {
     "react": "global:React",
@@ -86,7 +71,7 @@
     ]
   },
   "dependencies": {
-    "browserify-shim": "^3.8.0",
-    "browserify-jsx": "^0.1.0"
+    "browserify-jsx": "^0.1.0",
+    "browserify-shim": "^3.8.0"
   }
 }
