--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "licenses": "MIT",
   "spm": {
+    "buildArgs": "--global react:window.React",
     "dependencies": {
       "react": "~0.12.1"
     }
@@ -53,8 +54,7 @@
     "less"
   ],
   "browserify-shim": {
-    "react": "global:React",
-    "jquery": "global:jQuery"
+    "react": "global:React"
   },
   "browserify": {
     "transform": [
