--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -23,17 +23,18 @@
   "spm": {
     "buildArgs": "--global react:window.React",
     "dependencies": {
-      "react": "~0.12.1"
+      "react": "*"
     }
   },
   "config": {
     "port": 8002
   },
   "scripts": {
+    "example": "webpack -d && rc-tools run jsx2html",
     "less": "rc-tools run less",
     "history": "rc-tools run history",
     "start": "node --harmony node_modules/.bin/rc-server",
-    "publish": "spm publish && rc-tools run tag",
+    "publish": "rc-tools run tag && spm publish",
     "lint": "rc-tools run lint",
     "test": "",
     "saucelabs": "rc-tools run saucelabs",
@@ -41,33 +42,20 @@
     "browser-test-cover": "rc-tools run browser-test-cover"
   },
   "devDependencies": {
-    "async": "~0.9.0",
+    "css-loader": "^0.9.1",
     "expect.js": "~0.3.1",
-    "modulex": "^1.7.4",
+    "file-loader": "^0.8.1",
+    "jsx-loader": "^0.12.2",
     "precommit-hook": "^1.0.7",
-    "rc-server": "^1.5.0",
+    "rc-server": "^2.0.0",
     "rc-tools": "^1.1.0",
-    "react": "~0.12.1"
+    "react": "~0.12.1",
+    "style-loader": "^0.8.3",
+    "url-loader": "^0.5.5",
+    "webpack": "~1.5.3"
   },
   "precommit": [
     "lint",
     "less"
-  ],
-  "browserify-shim": {
-    "react": "global:React"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "browserify-jsx"
-      ],
-      [
-        "browserify-shim"
-      ]
-    ]
-  },
-  "dependencies": {
-    "browserify-jsx": "^0.1.0",
-    "browserify-shim": "^3.8.0"
-  }
+  ]
 }
