--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -23,7 +23,8 @@
   "spm": {
     "buildArgs": "--global react:window.React",
     "dependencies": {
-      "react": "*"
+      "react": "*",
+      "rc-util": "1.x"
     }
   },
   "config": {
@@ -40,6 +41,9 @@
     "saucelabs": "rc-tools run saucelabs",
     "browser-test": "rc-tools run browser-test",
     "browser-test-cover": "rc-tools run browser-test-cover"
+  },
+  "dependencies": {
+    "rc-util": "1.x"
   },
   "devDependencies": {
     "css-loader": "^0.9.1",
