--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "2.0.4",
+  "version": "3.0.0",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -21,10 +21,8 @@
   },
   "licenses": "MIT",
   "spm": {
-    "buildArgs": "--global react:window.React",
     "dependencies": {
-      "react": "*",
-      "rc-util": "1.x"
+      "react": "*"
     }
   },
   "config": {
@@ -42,9 +40,6 @@
     "browser-test": "rc-tools run browser-test",
     "browser-test-cover": "rc-tools run browser-test-cover"
   },
-  "dependencies": {
-    "rc-util": "1.x"
-  },
   "devDependencies": {
     "css-loader": "^0.9.1",
     "expect.js": "~0.3.1",
@@ -53,7 +48,7 @@
     "precommit-hook": "^1.0.7",
     "rc-server": "^2.0.0",
     "rc-tools": "^1.1.0",
-    "react": "~0.12.1",
+    "react": "0.13.x",
     "style-loader": "^0.8.3",
     "url-loader": "^0.5.5",
     "webpack": "~1.5.3"
