--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "rc-tabs",
-  "version": "5.0.4",
+  "version": "5.0.5",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
     "react-component",
     "react-tabs"
   ],
+  "main": "./lib/index",
   "homepage": "http://github.com/react-component/tabs",
   "maintainers": [
     "yiminghe@gmail.com",
@@ -20,21 +21,17 @@
     "url": "http://github.com/react-component/tabs/issues"
   },
   "licenses": "MIT",
-  "spm": {
-    "dependencies": {
-      "react": "*"
-    }
-  },
   "config": {
     "port": 8002
   },
   "scripts": {
     "build": "rc-tools run build",
+    "precommit": "rc-tools run precommit",
     "less": "rc-tools run less",
     "gh-pages": "rc-tools run gh-pages",
     "history": "rc-tools run history",
     "start": "node --harmony node_modules/.bin/rc-server",
-    "publish": "rc-tools run tag && spm publish",
+    "publish": "rc-tools run tag",
     "lint": "rc-tools run lint",
     "saucelabs": "node --harmony node_modules/.bin/rc-tools run saucelabs",
     "browser-test": "node --harmony node_modules/.bin/rc-tools run browser-test",
@@ -43,13 +40,12 @@
   "devDependencies": {
     "expect.js": "~0.3.1",
     "precommit-hook": "^1.0.7",
-    "rc-server": "^2.0.0",
-    "rc-tools": "2.x",
+    "rc-server": "3.x",
+    "rc-tools": "3.x",
     "react": "0.13.x"
   },
   "precommit": [
-    "lint",
-    "less"
+    "precommit"
   ],
   "dependencies": {
     "rc-css-transition-group": "^2.0.0"
