--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "rc-tabs",
-  "version": "5.3.2",
+  "version": "5.3.3",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
     "react-component",
     "react-tabs"
+  ],
+  "files": [
+    "lib",
+    "assets/*.css"
   ],
   "main": "./lib/index",
   "homepage": "http://github.com/react-component/tabs",
@@ -23,13 +27,11 @@
   },
   "scripts": {
     "build": "rc-tools run build",
-    "precommit": "rc-tools run precommit",
-    "less": "rc-tools run less",
     "gh-pages": "rc-tools run gh-pages",
-    "history": "rc-tools run history",
     "start": "node --harmony node_modules/.bin/rc-server",
-    "publish": "rc-tools run tag",
+    "pub": "rc-tools run pub",
     "lint": "rc-tools run lint",
+    "karma": "rc-tools run karma",
     "saucelabs": "node --harmony node_modules/.bin/rc-tools run saucelabs",
     "browser-test": "node --harmony node_modules/.bin/rc-tools run browser-test",
     "browser-test-cover": "node --harmony node_modules/.bin/rc-tools run browser-test-cover"
@@ -38,11 +40,11 @@
     "expect.js": "~0.3.1",
     "precommit-hook": "^1.0.7",
     "rc-server": "3.x",
-    "rc-tools": "3.x",
+    "rc-tools": "4.x",
     "react": "0.13.x"
   },
   "precommit": [
-    "precommit"
+    "lint"
   ],
   "dependencies": {
     "rc-animate": "1.x"
