--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "5.4.3",
+  "version": "5.4.4",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -38,14 +38,14 @@
   },
   "devDependencies": {
     "expect.js": "~0.3.1",
-    "precommit-hook": "^1.0.7",
+    "pre-commit": "1.x",
     "rc-server": "3.x",
     "rc-tools": "4.x",
     "react": "~0.14.0",
     "react-addons-test-utils": "^0.14.0",
     "react-dom": "^0.14.0"
   },
-  "precommit": [
+  "pre-commit": [
     "lint"
   ],
   "dependencies": {
