--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 
+sudo: false
+
 notifications:
   email:
   - yiminghe@gmail.com
@@ -14,8 +16,8 @@ before_install:
       echo "Only docs were updated, stopping build process."
       exit
     fi
+    npm install npm@3.x -g
     phantomjs --version
-
 script:
 - |
     if [ "$TEST_TYPE" = test ]; then
@@ -23,16 +25,11 @@ script:
     else
       npm run $TEST_TYPE
     fi
-
 env:
   matrix:
   - TEST_TYPE=lint
-  - TEST_TYPE=browser-test
-  - TEST_TYPE=browser-test-cover
-  - TEST_TYPE=saucelabs
-  global:
-  - secure: SHBw7srPW7gGoUaFClmj20oFKUBd9gQD7sk6/Gbdsh4ZAwG0rBiL9tPqkbRQ92SxriLlk23SJF7CPzS5D/Hszm3HuxRmsTRD+AXs2wGQYdLgDX1baVCGblPBSlqYXxdsWViaZ7SL9t1j0eJBw/ngEe5guTr6WxAtZB8kiisHS4Y=
-  - secure: Y5ZrYeDboe8wYdrDJAmX3hd5Eb712DxzNIsW7oeyEThPE7t0TyvOZVlE8x7E8yg86P0G+U9C+cJtf/was89B8bTI6+sBgkCz+dGcGu8/pQvkuGxdTzXM+AqUbMCDWm2FKII7v80TxcGS6TnzPFgu2DtNpL/UDtHKMI+uFDGMjz4=
+  - TEST_TYPE=test
+  - TEST_TYPE=coverage
 
 
 matrix:
