--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "5.8.2",
+  "version": "5.8.3",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -42,9 +42,9 @@
     "history": "^1.17.0",
     "pre-commit": "1.x",
     "rc-tools": "5.x",
-    "react": "~0.14.0",
-    "react-addons-test-utils": "^0.14.0",
-    "react-dom": "^0.14.0",
+    "react": "15.x",
+    "react-addons-test-utils": "15.x",
+    "react-dom": "15.x",
     "react-router": "^1.0.3"
   },
   "pre-commit": [
