--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "5.9.2",
+  "version": "5.9.3",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -29,7 +29,7 @@
     "build": "rc-tools run build",
     "gh-pages": "rc-tools run gh-pages",
     "start": "rc-tools run server",
-    "pub": "rc-tools run pub",
+    "pub": "rc-tools run pub --babel-runtime",
     "lint": "rc-tools run lint",
     "karma": "rc-tools run karma",
     "saucelabs": "rc-tools run saucelabs",
@@ -45,12 +45,13 @@
     "react": "15.x",
     "react-addons-test-utils": "15.x",
     "react-dom": "15.x",
-    "react-router": "^1.0.3"
+    "react-router": "2.x"
   },
   "pre-commit": [
     "lint"
   ],
   "dependencies": {
+    "babel-runtime": "6.x",
     "classnames": "2.x",
     "rc-animate": "2.x"
   }
