--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "6.0.2",
+  "version": "7.0.0",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -52,7 +52,6 @@
   ],
   "dependencies": {
     "babel-runtime": "6.x",
-    "classnames": "2.x",
-    "rc-animate": "2.x"
+    "classnames": "2.x"
   }
 }
