--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   ],
   "dependencies": {
     "babel-runtime": "6.x",
-    "classnames": "2.x"
+    "classnames": "2.x",
+    "react-hammerjs": "~0.5.0"
   }
 }
