--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "expect.js": "~0.3.1",
+    "fastclick": "~1.0.6",
     "history": "^1.17.0",
     "pre-commit": "1.x",
     "rc-tools": "5.x",
