--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "babel-runtime": "6.x",
     "classnames": "2.x",
+    "react-draggable": "^2.2.2",
     "react-hammerjs": "~0.5.0"
   }
 }
