--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "7.3.1",
+  "version": "7.3.2",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -55,8 +55,9 @@
     "pre-commit": "1.x",
     "rc-tools": "5.x",
     "react": "15.x",
-    "react-dom": "15.x",
-    "react-router": "2.x"
+    "react-dom": "^15.5.4",
+    "react-router": "2.x",
+    "react-test-renderer": "^15.5.4"
   },
   "pre-commit": [
     "lint"
@@ -64,8 +65,8 @@
   "dependencies": {
     "babel-runtime": "6.x",
     "classnames": "2.x",
-    "create-react-class" : "15.x",
-    "prop-types" : "15.x",
+    "create-react-class": "15.x",
+    "prop-types": "15.x",
     "react-hammerjs": "~0.5.0"
   }
 }
