--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "7.3.4",
+  "version": "7.3.5",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "build": "rc-tools run build",
+    "compile": "rc-tools run compile",
     "gh-pages": "rc-tools run gh-pages",
     "start": "rc-tools run server",
     "pub": "rc-tools run pub --babel-runtime",
@@ -67,7 +68,7 @@
     "classnames": "2.x",
     "create-react-class": "15.x",
     "prop-types": "15.x",
-    "react-hammerjs": "~0.5.0",
+    "rc-hammerjs": "~0.6.0",
     "warning": "^3.0.0"
   }
 }
