test: fix test && update snapshot

--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
   "jest": {
     "collectCoverageFrom": [
       "src/*"
-    ]
+    ],
+    "transform": {
+      "\\.tsx?$": "./node_modules/rc-tools/scripts/jestPreprocessor.js",
+      "\\.jsx?$": "./node_modules/rc-tools/scripts/jestPreprocessor.js"
+    }
   },
   "devDependencies": {
     "coveralls": "^2.11.16",
