--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "8.0.0-beta.0",
+  "version": "8.0.0",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
