--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "create-react-class": "15.x",
     "prop-types": "15.x",
     "rc-hammerjs": "~0.6.0",
+    "react-sortablejs": "^1.3.4",
+    "sortablejs": "^1.6.0",
     "warning": "^3.0.0"
   }
 }
