--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "react-router": "2.x",
     "react-test-renderer": "^15.5.4",
     "preact": "^8.2.1",
-    "preact-compat": "^3.16.0"
+    "preact-compat": "^3.16.0",
+    "sortablejs": "^1.6.0"
   },
   "pre-commit": [
     "lint"
@@ -81,7 +82,6 @@
     "prop-types": "15.x",
     "rc-hammerjs": "~0.6.0",
     "react-sortablejs": "^1.3.4",
-    "sortablejs": "^1.6.0",
     "warning": "^3.0.0"
   }
 }
