--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "files": [
     "lib",
     "es",
+    "dist",
     "assets/index.css"
   ],
   "main": "./lib/index",
@@ -25,14 +26,20 @@
   },
   "licenses": "MIT",
   "config": {
-    "port": 8002
+    "port": 8002,
+    "entry": {
+      "rc-tabs": [
+        "./src/index.js",
+        "./assets/index.less"
+      ]
+    }
   },
   "scripts": {
+    "dist": "rc-tools run dist",
     "build": "rc-tools run build",
     "compile": "rc-tools run compile --babel-runtime",
     "gh-pages": "rc-tools run gh-pages",
     "start": "rc-tools run server",
-    "start:preact": "cross-env DEMO_ENV=preact rc-tools run server",
     "pub": "rc-tools run pub --babel-runtime",
     "lint": "rc-tools run lint",
     "watch": "rc-tools run watch",
@@ -80,6 +87,7 @@
     "create-react-class": "15.x",
     "prop-types": "15.x",
     "rc-hammerjs": "~0.6.0",
+    "rc-util": "^4.0.4",
     "warning": "^3.0.0"
   }
 }
