--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "babel-runtime": "6.x",
     "classnames": "2.x",
     "create-react-class": "15.x",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "15.x",
     "rc-hammerjs": "~0.6.0",
     "rc-util": "^4.0.4",
