--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "jest": {
+    "setupFiles": [
+      "./tests/setup.js"
+    ],
     "collectCoverageFrom": [
       "src/*"
     ],
@@ -62,21 +65,22 @@
   "devDependencies": {
     "coveralls": "^2.11.16",
     "cross-env": "^5.0.1",
-    "enzyme": "^2.7.1",
-    "enzyme-to-json": "^1.5.0",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "enzyme-to-json": "^3.0.0",
     "expect.js": "~0.3.1",
     "fastclick": "~1.0.6",
     "history": "^1.17.0",
     "jest": "^19.0.2",
     "pre-commit": "1.x",
+    "preact": "^8.2.1",
+    "preact-compat": "^3.16.0",
     "rc-test": "^6.0.1",
     "rc-tools": "6.x",
-    "react": "15.x",
-    "react-dom": "^15.5.4",
-    "react-router": "2.x",
-    "react-test-renderer": "^15.5.4",
-    "preact": "^8.2.1",
-    "preact-compat": "^3.16.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router": "^3.0.0",
+    "react-test-renderer": "^16.0.0"
   },
   "pre-commit": [
     "lint"
