--- a/package.json
+++ b/package.json
@@ -91,8 +91,10 @@
   "dependencies": {
     "babel-runtime": "6.x",
     "classnames": "2.x",
+    "create-react-context": "^0.2.3",
     "lodash": "^4.17.5",
     "prop-types": "15.x",
+    "raf": "^3.4.1",
     "rc-hammerjs": "~0.6.0",
     "rc-util": "^4.0.4",
     "warning": "^3.0.0"
