--- a/package.json
+++ b/package.json
@@ -61,29 +61,31 @@
     "transform": {
       "\\.tsx?$": "./node_modules/rc-tools/scripts/jestPreprocessor.js",
       "\\.jsx?$": "./node_modules/rc-tools/scripts/jestPreprocessor.js"
+    },
+    "globals": {
+      "__JEST__DEV__": true
     }
   },
   "devDependencies": {
     "coveralls": "^2.11.16",
     "cross-env": "^5.0.1",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.1",
-    "enzyme-to-json": "^3.0.0",
-    "expect.js": "~0.3.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "enzyme-to-json": "^3.3.4",
     "fastclick": "~1.0.6",
     "history": "^1.17.0",
-    "jest": "^19.0.2",
+    "jest": "^23.6.0",
     "pre-commit": "1.x",
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
     "rc-test": "^6.0.1",
-    "rc-tools": "6.x",
+    "rc-tools": "8.x",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-sortablejs": "^1.3.6",
-    "sortablejs": "^1.7.0",
     "react-router": "^3.0.0",
-    "react-test-renderer": "^16.0.0"
+    "react-sortablejs": "^1.3.6",
+    "react-test-renderer": "^16.0.0",
+    "sortablejs": "^1.7.0"
   },
   "pre-commit": [
     "lint"
