--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "enzyme-to-json": "^3.3.4",
     "fastclick": "~1.0.6",
     "history": "^1.17.0",
+    "immutability-helper": "^2.9.0",
     "jest": "^23.6.0",
     "pre-commit": "1.x",
     "preact": "^8.2.1",
@@ -81,9 +82,10 @@
     "rc-test": "^6.0.1",
     "rc-tools": "8.x",
     "react": "^16.0.0",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.0.0",
     "react-router": "^3.0.0",
-    "react-sortablejs": "^1.3.6",
     "react-test-renderer": "^16.0.0",
     "sortablejs": "^1.7.0"
   },
