--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "sortablejs": "^1.7.0"
   },
   "peerDependencies": {
-    "react": "^0.14.3 || ^15.0.0 || ^16.0.0"
+    "react": ">=15"
   },
   "pre-commit": [
     "lint"
