--- a/package.json
+++ b/package.json
@@ -89,6 +89,9 @@
     "react-test-renderer": "^16.0.0",
     "sortablejs": "^1.7.0"
   },
+  "peerDependencies": {
+    "react": ">=15.0.0"
+  },
   "pre-commit": [
     "lint"
   ],
