--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "raf": "^3.4.1",
     "rc-hammerjs": "~0.6.0",
     "rc-util": "^4.0.4",
+    "resize-observer-polyfill": "^1.5.1",
     "warning": "^3.0.0"
   }
 }
