--- a/package.json
+++ b/package.json
@@ -96,9 +96,9 @@
     "lint"
   ],
   "dependencies": {
+    "@ant-design/create-react-context": "^0.2.4",
     "babel-runtime": "6.x",
     "classnames": "2.x",
-    "create-react-context": "0.3.0",
     "lodash": "^4.17.5",
     "prop-types": "15.x",
     "raf": "^3.4.1",
