--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-tabs",
-  "version": "9.7.0",
+  "version": "10.0.0-alpha.0",
   "description": "tabs ui component for react",
   "keywords": [
     "react",
@@ -97,7 +97,6 @@
     "lint"
   ],
   "dependencies": {
-    "@ant-design/create-react-context": "^0.2.4",
     "babel-runtime": "6.x",
     "classnames": "2.x",
     "lodash": "^4.17.5",
@@ -105,7 +104,6 @@
     "raf": "^3.4.1",
     "rc-hammerjs": "~0.6.0",
     "rc-util": "^4.0.4",
-    "react-lifecycles-compat": "^3.0.4",
     "resize-observer-polyfill": "^1.5.1",
     "warning": "^4.0.3"
   }
