--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "rc-tabs",
   "version": "10.0.0",
   "description": "tabs ui component for react",
+  "engines": {
+    "node": ">=8.x"
+  },
   "keywords": [
     "react",
     "react-component",
