--- a/package.json
+++ b/package.json
@@ -28,47 +28,17 @@
     "url": "http://github.com/react-component/tabs/issues"
   },
   "license": "MIT",
-  "config": {
-    "port": 8002,
-    "entry": {
-      "rc-tabs": [
-        "./src/index.js",
-        "./assets/index.less"
-      ]
-    }
-  },
   "scripts": {
-    "dist": "rc-tools run dist",
-    "build": "rc-tools run build",
-    "compile": "rc-tools run compile --babel-runtime",
-    "gh-pages": "rc-tools run gh-pages",
-    "start": "rc-tools run server",
-    "pub": "rc-tools run pub --babel-runtime",
-    "prepublish": "rc-tools run guard",
-    "lint": "rc-tools run lint",
-    "watch": "rc-tools run watch",
-    "karma": "rc-test run karma",
-    "saucelabs": "rc-test run saucelabs",
-    "test": "jest",
-    "updateSn": "jest --updateSnapshot",
+    "start": "father doc dev --storybook",
+    "build": "father doc build --storybook",
+    "compile": "father build && npm run compile:style",
+    "test": "father test",
     "chrome-test": "rc-test run chrome-test",
-    "coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
-    "now-build": "npm run build"
-  },
-  "jest": {
-    "setupFiles": [
-      "./tests/setup.js"
-    ],
-    "collectCoverageFrom": [
-      "src/*"
-    ],
-    "transform": {
-      "\\.tsx?$": "./node_modules/rc-tools/scripts/jestPreprocessor.js",
-      "\\.jsx?$": "./node_modules/rc-tools/scripts/jestPreprocessor.js"
-    },
-    "globals": {
-      "__JEST__DEV__": true
-    }
+    "coverage": "father test --coverage",
+    "now-build": "npm run build",
+    "lint": "eslint src/ examples/ --ext .tsx,.ts,.jsx,.js",
+    "compile:style": "lessc --js assets/index.less assets/index.css",
+    "prepublishOnly": "npm run lint && npm run test && npm run compile && np --no-cleanup --yolo --no-publish"
   },
   "devDependencies": {
     "coveralls": "^3.0.6",
@@ -79,16 +49,13 @@
     "fastclick": "~1.0.6",
     "history": "^1.17.0",
     "immutability-helper": "^3.0.1",
-    "jest": "^23.6.0",
-    "pre-commit": "1.x",
+    "less-loader": "^5.0.0",
+    "np": "^6.2.0",
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
-    "rc-test": "^6.0.1",
-    "rc-tools": "8.x",
     "react": "^16.0.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
-    "react-dom": "^16.0.0",
     "react-router": "^3.0.0",
     "react-test-renderer": "^16.0.0",
     "sortablejs": "^1.7.0"
@@ -96,18 +63,17 @@
   "peerDependencies": {
     "react": ">=15.0.0"
   },
-  "pre-commit": [
-    "lint"
-  ],
   "dependencies": {
-    "babel-runtime": "6.x",
+    "@umijs/fabric": "^1.1.9",
     "classnames": "2.x",
+    "father": "^2.29.2",
     "lodash": "^4.17.5",
     "prop-types": "15.x",
     "raf": "^3.4.1",
     "rc-hammerjs": "~0.6.0",
     "rc-util": "^4.0.4",
     "resize-observer-polyfill": "^1.5.1",
-    "warning": "^4.0.3"
+    "warning": "^4.0.3",
+    "react-dom": "^16.0.0"
   }
 }
