--- a/package.json
+++ b/package.json
@@ -54,23 +54,23 @@
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
     "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
     "react-router": "^3.0.0",
     "react-test-renderer": "^16.0.0",
-    "sortablejs": "^1.7.0"
+    "sortablejs": "^1.7.0",
+    "father": "^2.29.2",
+    "@umijs/fabric": "^2.0.4"
   },
   "peerDependencies": {
     "react": ">=15.0.0"
   },
   "dependencies": {
-    "@umijs/fabric": "^2.0.4",
     "classnames": "2.x",
-    "father": "^2.29.2",
     "lodash": "^4.17.5",
     "rc-hammerjs": "~0.6.0",
     "resize-observer-polyfill": "^1.5.1",
-    "warning": "^4.0.3",
-    "react-dom": "^16.0.0"
+    "warning": "^4.0.3"
   }
 }
