--- a/package.json
+++ b/package.json
@@ -41,12 +41,15 @@
     "prepublishOnly": "npm run lint && npm run test && npm run compile && np --no-cleanup --yolo --no-publish"
   },
   "devDependencies": {
+    "@umijs/fabric": "^2.0.4",
     "coveralls": "^3.0.6",
     "cross-env": "^7.0.2",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
+    "eslint": "^6.8.0",
     "fastclick": "~1.0.6",
+    "father": "^2.29.2",
     "history": "^1.17.0",
     "immutability-helper": "^3.0.1",
     "less-loader": "^5.0.0",
@@ -54,14 +57,12 @@
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
+    "react-dom": "^16.0.0",
     "react-router": "^3.0.0",
     "react-test-renderer": "^16.0.0",
-    "sortablejs": "^1.7.0",
-    "father": "^2.29.2",
-    "@umijs/fabric": "^2.0.4"
+    "sortablejs": "^1.7.0"
   },
   "dependencies": {
     "classnames": "2.x",
