--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/jest": "^25.2.3",
+    "@types/raf": "^3.4.0",
     "@types/react": "^16.9.35",
     "@umijs/fabric": "^2.0.4",
     "coveralls": "^3.0.6",
@@ -70,6 +71,8 @@
   },
   "dependencies": {
     "classnames": "2.x",
+    "raf": "^3.4.1",
+    "rc-resize-observer": "^0.2.1",
     "rc-util": "^4.20.5"
   }
 }
