--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "start": "father doc dev --storybook",
+    "start": "cross-env NODE_ENV=development father doc dev --storybook",
     "build": "father doc build --storybook",
     "compile": "father build && npm run compile:style",
     "test": "father test",
