--- a/package.json
+++ b/package.json
@@ -72,7 +72,10 @@
   "dependencies": {
     "classnames": "2.x",
     "raf": "^3.4.1",
+    "rc-dropdown": "^3.1.0",
+    "rc-menu": "^8.2.1",
     "rc-resize-observer": "^0.2.1",
+    "rc-trigger": "^4.2.1",
     "rc-util": "^4.20.5"
   }
 }
