--- a/package.json
+++ b/package.json
@@ -61,10 +61,11 @@
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
     "react": "^16.0.0",
-    "react-dnd": "^7.0.2",
-    "react-dnd-html5-backend": "^7.0.2",
+    "react-dnd": "^7.7.0",
+    "react-dnd-html5-backend": "^7.7.0",
     "react-dom": "^16.0.0",
     "react-router": "^3.0.0",
+    "react-sticky": "^6.0.3",
     "react-test-renderer": "^16.0.0",
     "sortablejs": "^1.7.0",
     "typescript": "^3.9.2"
