--- a/package.json
+++ b/package.json
@@ -29,11 +29,10 @@
   },
   "license": "MIT",
   "scripts": {
-    "start": "father doc dev --storybook",
+    "start": "cross-env NODE_ENV=development father doc dev --storybook",
     "build": "father doc build --storybook",
     "compile": "father build && npm run compile:style",
     "test": "father test",
-    "chrome-test": "rc-test run chrome-test",
     "coverage": "father test --coverage",
     "now-build": "npm run build",
     "lint": "eslint src/ examples/ --ext .tsx,.ts,.jsx,.js",
@@ -41,13 +40,19 @@
     "prepublishOnly": "npm run lint && npm run test && npm run compile && np --no-cleanup --yolo --no-publish"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.5",
+    "@types/jest": "^25.2.3",
+    "@types/raf": "^3.4.0",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@umijs/fabric": "^2.0.4",
     "coveralls": "^3.0.6",
     "cross-env": "^7.0.2",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
     "fastclick": "~1.0.6",
     "father": "^2.29.2",
     "history": "^1.17.0",
@@ -58,18 +63,22 @@
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
     "react": "^16.0.0",
-    "react-dnd": "^7.0.2",
-    "react-dnd-html5-backend": "^7.0.2",
+    "react-dnd": "^10.0.0",
+    "react-dnd-html5-backend": "^10.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^3.0.0",
+    "react-sticky": "^6.0.3",
     "react-test-renderer": "^16.0.0",
-    "sortablejs": "^1.7.0"
+    "sortablejs": "^1.7.0",
+    "typescript": "^3.9.2"
   },
   "dependencies": {
     "classnames": "2.x",
-    "lodash": "^4.17.5",
-    "rc-hammerjs": "~0.6.0",
-    "resize-observer-polyfill": "^1.5.1",
-    "warning": "^4.0.3"
+    "raf": "^3.4.1",
+    "rc-dropdown": "^3.1.0",
+    "rc-menu": "^8.2.1",
+    "rc-resize-observer": "^0.2.1",
+    "rc-trigger": "^4.2.1",
+    "rc-util": "^4.20.5"
   }
 }
