--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "esnext",
     "moduleResolution": "node",
     "baseUrl": "./",
+    "lib": ["dom", "es2017"],
     "jsx": "preserve",
     "declaration": true,
     "skipLibCheck": true,
