--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build": "dumi build",
     "docs:deploy": "gh-pages -d .doc",
     "compile": "father build && npm run compile:style",
-    "test": "father test",
+    "test": "rc-test",
     "coverage": "father test --coverage",
     "now-build": "npm run build",
     "lint": "eslint src/ docs/examples/ --ext .tsx,.ts,.jsx,.js",
@@ -45,8 +45,8 @@
     "@testing-library/react": "^12.0.0",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
-    "@types/keyv": "3.1.4",
     "@types/jest": "^25.2.3",
+    "@types/keyv": "3.1.4",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^16.9.8",
     "@umijs/fabric": "^2.3.1",
@@ -54,11 +54,11 @@
     "cross-env": "^7.0.2",
     "dumi": "^1.1.0",
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^7.0.0",
     "fastclick": "~1.0.6",
-    "father": "^2.29.2",
+    "father": "^4.0.0",
     "gh-pages": "^3.1.0",
     "history": "^1.17.0",
     "immutability-helper": "^3.0.1",
@@ -66,14 +66,15 @@
     "np": "^7.5.0",
     "preact": "^8.2.1",
     "preact-compat": "^3.16.0",
+    "rc-test": "^7.0.14",
     "react": "^16.0.0",
     "react-dnd": "^10.0.0",
     "react-dnd-html5-backend": "^10.0.0",
     "react-dom": "^16.0.0",
     "react-sticky": "^6.0.3",
-    "react-test-renderer": "^16.0.0",
     "sortablejs": "^1.7.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "@rc-component/father-plugin": "^1.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
