chore: make dumi types can be resolved (#637)
* chore: make dumi types can be resolved

* chore: update tsconfig include

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,12 @@
         "src/*"
       ],
       "@@/*": [
-        "src/.umi/*"
+        ".dumi/tmp/*"
       ],
       "rc-tabs": [
         "src/"
       ]
     }
-  }
+  },
+  "include": [".dumi/**/*", ".dumirc.ts", "**/*.ts", "**/*.tsx"]
 }
