feat: Tab Item support icon prop

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,9 @@
       ]
     }
   },
-  "include": [".dumi/**/*", ".dumirc.ts", "**/*.ts", "**/*.tsx"]
+  "include": [
+    ".dumirc.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
