--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^29.4.0",
     "@types/keyv": "4.2.0",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.0.11",
+    "@types/node": "^22.12.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@umijs/fabric": "^4.0.1",
     "coveralls": "^3.0.6",
     "cross-env": "^7.0.2",
